More main page updates

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <h1 style="text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); color: #6d6d6d; font-weight: bold">ORConf</h1>
             <h3 style="text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8); color: #003366; font-weight: bold">The premier open source silicon conference</h3>
             <p>
-              <strong>September 13th to 15th</strong> in Gothenburg, Sweden.
+              <strong>September 13th to 15th, 2024</strong> in Gothenburg, Sweden.
             </p>
 
         </div><!-- col -->
@@ -62,7 +62,11 @@
                   <p>
                     The FOSSi Foundation are pleased to announce ORConf 2024 will be
                     taking place in Gothenburg, Sweden.
-                   </p>
+                  </p>
+                  <p>
+                    Please see the main ORConf site here for further details: <a href="https://fossi-foundation.org/orconf">fossi-foundation.org/orconf</a>
+                  </p>
+
                   <hr>
 
                   <p class="card-text">ORConf is an annual conference for open source semiconductor designers, open source EDA tool developers and the community.
@@ -79,6 +83,7 @@
 
                   <p style="text-align: center">
                     Previous ORConfs:
+                    <a href="../2023/">2019</a> |
                     <a href="../2019/">2019</a> |
                     <a href="../2018/">2018</a> |
                     <a href="../2017/">2017</a> |
