More main page updates

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     taking place in Gothenburg, Sweden.
                   </p>
                   <p>
-                    Please see the main ORConf site here for further details: <a href="https://fossi-foundation.org/orconf">fossi-foundation.org/orconf</a>
+                    Please see the main ORConf site for further details: <a href="https://fossi-foundation.org/orconf">fossi-foundation.org/orconf</a>
                   </p>
 
                   <hr>
@@ -78,7 +78,7 @@
                   </p>
 
                   <p>
-                    Please see the main ORConf site here for further details: <a href="https://fossi-foundation.org/orconf">fossi-foundation.org/orconf</a>
+                    Please see the main ORConf site for further details: <a href="https://fossi-foundation.org/orconf">fossi-foundation.org/orconf</a>
                   </p>
 
                   <p style="text-align: center">
